[FIX] hr_skills: fix pseudo-element position
Prior to this commit, the pseudo-element in the employee resume tab was
not aligned on every media-query, making it invisible on large devices.

This commits ensure the visibility of the element no matter what device
you are using.

Task-3474635
Part of task-3326263

closes odoo/odoo#132616

--- a/addons/hr_skills/static/src/fields/resume_one2many.scss
+++ b/addons/hr_skills/static/src/fields/resume_one2many.scss
@@ -23,7 +23,11 @@
                 content: "";
 
                 @include media-breakpoint-up(lg, $o-extra-grid-breakpoints) {
-                    left: ($o-hrs-timeline-dot-size * .5 + o-to-rem($o-horizontal-padding) * 2 - o-to-rem($border-width))
+                    left: ($o-hrs-timeline-dot-size * .5 + o-to-rem(map-get($spacers, 4))  - o-to-rem($border-width))
+                }
+
+                @include media-breakpoint-up(xxl, $o-extra-grid-breakpoints) {
+                    left: ($o-hrs-timeline-dot-size * .5 + o-to-rem($o-horizontal-padding)  - o-to-rem($border-width))
                 }
             }
         }
